@@ -20,11 +20,10 @@ namespace LHAPDF {
 
   double NearestPointExtrapolator::extrapolateXQ2(int id, double x, double q2) const {
     // Find the closest valid x and Q2 points, either on- or off-grid, and use the current interpolator
-    cout << "FOO" << endl;
     const double closestX = (pdf().inRangeX(x)) ? x : _findClosestMatch(pdf().xKnots(), x);
     const double closestQ2 = (pdf().inRangeQ2(q2)) ? q2 : _findClosestMatch(pdf().q2Knots(), q2);
-    cout << closestX << ", " << closestQ2 << endl;
-    return pdf().interpolator().interpolateXQ2(id, closestX, closestQ2 - 1);
+    // cout << "FOO" << closestX << ", " << closestQ2 << endl;
+    return pdf().interpolator().interpolateXQ2(id, closestX, closestQ2);
   }
 
 
